force-app/main/default/objects/TrigSettings__c/fields/Account_Trigger_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Account_Trigger_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Trigger Disabled</label>
    <type>Checkbox</type>
</CustomField>