force-app/main/default/objects/TrigSettings__c/fields/AccountContactRelation_Trigger_Disabled__c.field-meta.xml
<CustomField>
    <fullName>AccountContactRelation_Trigger_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AccountContactRelation_Trigger_Disabled</label>
    <type>Checkbox</type>
</CustomField>