force-app/main/default/objects/TrigSettings__c/fields/Affected_Customer_Trigger_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Affected_Customer_Trigger_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Affected Customer Trigger Disabled</label>
    <type>Checkbox</type>
</CustomField>