force-app/main/default/objects/TrigSettings__c/fields/Artefact_Trigger_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Artefact_Trigger_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Artefact Trigger Disabled</label>
    <type>Checkbox</type>
</CustomField>