force-app/main/default/objects/TrigSettings__c/fields/Asset_Trigger_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Asset_Trigger_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asset Trigger Disabled</label>
    <type>Checkbox</type>
</CustomField>