force-app/main/default/objects/TrigSettings__c/fields/Case_Trigger_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Case_Trigger_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Trigger Disabled</label>
    <type>Checkbox</type>
</CustomField>