force-app/main/default/objects/TrigSettings__c/fields/Connection_Point_Trigger_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Connection_Point_Trigger_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Connection Point Trigger Disabled</label>
    <type>Checkbox</type>
</CustomField>