force-app/main/default/objects/TrigSettings__c/fields/Contact_Trigger_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Contact_Trigger_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Trigger Disabled</label>
    <type>Checkbox</type>
</CustomField>