force-app/main/default/objects/TrigSettings__c/fields/ContactPointEmail_Trigger_Disabled__c.field-meta.xml
<CustomField>
    <fullName>ContactPointEmail_Trigger_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ContactPointEmail Trigger Disabled</label>
    <type>Checkbox</type>
</CustomField>