force-app/main/default/objects/TrigSettings__c/fields/ContactPointPhone_Trigger_Disabled__c.field-meta.xml
<CustomField>
    <fullName>ContactPointPhone_Trigger_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ContactPointPhone Trigger Disabled</label>
    <type>Checkbox</type>
</CustomField>