force-app/main/default/objects/TrigSettings__c/fields/ContentDocumentLink_Trigger_Disabled__c.field-meta.xml
<CustomField>
    <fullName>ContentDocumentLink_Trigger_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ContentDocumentLink Trigger Disabled</label>
    <type>Checkbox</type>
</CustomField>