force-app/main/default/objects/TrigSettings__c/fields/CPC_Trigger_Disabled__c.field-meta.xml
<CustomField>
    <fullName>CPC_Trigger_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CP Consent Trigger Disabled</label>
    <type>Checkbox</type>
</CustomField>