force-app/main/default/objects/TrigSettings__c/fields/DataUsePurpose_Trigger_Disabled__c.field-meta.xml
<CustomField>
    <fullName>DataUsePurpose_Trigger_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DataUsePurpose_Trigger_Disabled</label>
    <type>Checkbox</type>
</CustomField>