force-app/main/default/objects/TrigSettings__c/fields/DER_Application_Trigger_Disabled__c.field-meta.xml
<CustomField>
    <fullName>DER_Application_Trigger_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DER Application Trigger Disabled</label>
    <type>Checkbox</type>
</CustomField>