force-app/main/default/objects/TrigSettings__c/fields/Device_Trigger_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Device_Trigger_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Device Trigger Disabled</label>
    <type>Checkbox</type>
</CustomField>