force-app/main/default/objects/TrigSettings__c/fields/Incident_Trigger_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Incident_Trigger_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incident Trigger Disabled</label>
    <type>Checkbox</type>
</CustomField>