force-app/main/default/objects/TrigSettings__c/fields/LSC_Task_Generation_Disabled__c.field-meta.xml
<CustomField>
    <fullName>LSC_Task_Generation_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LSC Task Generation Disabled</label>
    <type>Checkbox</type>
</CustomField>