force-app/main/default/objects/TrigSettings__c/fields/Project_Trigger_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Project_Trigger_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project Trigger Disabled</label>
    <type>Checkbox</type>
</CustomField>