force-app/main/default/objects/TrigSettings__c/fields/SegmentLoader_Trigger_Disabled__c.field-meta.xml
<CustomField>
    <fullName>SegmentLoader_Trigger_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SegmentLoader Trigger Disabled</label>
    <type>Checkbox</type>
</CustomField>