force-app/main/default/objects/TrigSettings__c/fields/Service_Point_Trig_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Service_Point_Trig_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Point Trigger Disabled</label>
    <type>Checkbox</type>
</CustomField>