force-app/main/default/objects/TrigSettings__c/fields/TariffTrial_Trigger_Disabled__c.field-meta.xml
<CustomField>
    <fullName>TariffTrial_Trigger_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TariffTrial Trigger Disabled</label>
    <type>Checkbox</type>
</CustomField>