force-app/main/default/objects/TrigSettings__c/fields/Task_Trigger_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Task_Trigger_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Task Trigger Disabled</label>
    <type>Checkbox</type>
</CustomField>