force-app/main/default/objects/TrigSettings__c/fields/Trig_Premises_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Trig_Premises_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trig Premises Disabled</label>
    <type>Checkbox</type>
</CustomField>