force-app/main/default/objects/TrigSettings__c/fields/User_Trigger_Disabled__c.field-meta.xml
<CustomField>
    <fullName>User_Trigger_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>User Trigger Disabled</label>
    <type>Checkbox</type>
</CustomField>