force-app/main/default/objects/TrigSettings__c/fields/WorkOrder_Trigger_Disabled__c.field-meta.xml
<CustomField>
    <fullName>WorkOrder_Trigger_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Work Order Trigger</description>
    <label>WorkOrder Trigger Disabled</label>
    <type>Checkbox</type>
</CustomField>